# document-rag-mcp

./: .gitignore  404.html  README.md  config.example.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
architecture/: index.html
cli/: index.html
configuration/: index.html
docs/: architecture.md  cli.md  configuration.md  getting-started.md  index.md
getting-started/: index.html
scripts/: inspect_bm25_text.py  inspect_chonkie.py  inspect_distances.py  inspect_search.py  test_chunker.py  test_headings.py
search/: search_index.json
src/document_rag_mcp/: __init__.py  cli.py  config.py  models.py  server.py
src/document_rag_mcp/embedding/: client.py
src/document_rag_mcp/ingestion/: chunker.py  extractor.py  pipeline.py  scanner.py  watcher.py
src/document_rag_mcp/search/: engine.py
src/document_rag_mcp/storage/: state_store.py  vector_store.py
src/document_rag_mcp/vision/: client.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_embedding_client.py  test_extractor.py  test_integration.py  test_pipeline.py  test_scanner.py  test_search.py  test_server.py  test_state_store.py  test_vector_store.py  test_vision_client.py  test_watcher.py
