[project]
name = "document-rag-mcp"
version = "0.1.0"
description = "RAG MCP Server — watches folders, chunks documents, serves semantic search via MCP"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "chromadb>=1.5",
    "openai>=1.80",
    "chonkie[semantic]>=1.0",
    "pymupdf>=1.25",
    "watchfiles>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
document-rag-mcp = "document_rag_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_rag_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
